--- a/game-library.html
+++ b/game-library.html
@@ -14,7 +14,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description"
         content="Explore Boardwalk Games' vast library of engaging and exciting board games available for rent or purchase. Reserve your game online and embark on your next board game adventure today!">
-    <title>Boardwalk Games | Game Libray</title>
+    <title>Boardwalk Games | Game Library</title>
 </head>
 
 <!-- classes on body set to work with my-auto on footer to push footer down to bottom -->
@@ -42,6 +42,9 @@
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="./index.html#contact">Contact</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="booking.html" class="btn btn-primary ms-lg-3">Book now</a>
                     </li>
                 </ul>
             </div>
