--- a/index.html
+++ b/index.html
@@ -43,6 +43,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="#contact">Contact</a>
                     </li>
+                    <li class="nav-item">
+                        <a href="booking.html" class="btn btn-primary ms-lg-3">Book now</a>
+                    </li>
                 </ul>
             </div>
         </div>
@@ -53,49 +56,61 @@
             <div class="col-12 col-xl-6 text-center text-xl-start">
                 <h1 class="display-3">Boardwalk Games</h1>
                 <p class="lead display-6 sub-heading-color">Your next adventure is waiting!</p>
-                <p class="my-4">Welcome to Boardwalk Games, Your Ultimate Gaming Getaway! Escape into the world of board games and
+                <p class="my-4">Welcome to Boardwalk Games, Your Ultimate Gaming Getaway! Escape into the world of board
+                    games and
                     café delights. Whether you're a casual gamer seeking a cosy nook to unwind, a board game enthusiast
                     ready for your next challenge, or a student gamer looking for a fun, affordable hangout, we've got
                     you covered.</p>
+
+                <a href="booking.html" class="btn btn-primary mb-4">Book now</a>
+
             </div>
             <div class="col-12 col-xl-6">
                 <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
                     <div class="carousel-inner">
-                      <div class="carousel-item active">
-                        <img src="./assets/images/boardwalk-games-carousel-image-1.webp" class="d-block w-100" alt=" The inside of Boardwalk Games with bookshelves filled with boardgames, and wooden tables to play at">
-                      </div>
-                      <div class="carousel-item">
-                        <img src="./assets/images/boardwalk-games-carousel-image-2.webp" class="d-block w-100" alt="The inside of Boardwalk Games with bookshelves filled with boardgames, and wooden tables to play at">
-                      </div>
-                      <div class="carousel-item">
-                        <img src="./assets/images/boardwalk-games-carousel-image-3.webp" class="d-block w-100" alt="The inside of Boardwalk Games with bookshelves filled with boardgames, and wooden tables to play at">
-                      </div>
-                      <div class="carousel-item">
-                        <img src="./assets/images/boardwalk-games-carousel-image-4.webp" class="d-block w-100" alt="The back-room at Boardwalk Games set up for a Dungeons and Dragons evening">
-                      </div>
-                      <div class="carousel-item">
-                        <img src="./assets/images/boardwalk-games-carousel-image-5.webp" class="d-block w-100" alt=" A cup of steaming coffee on a wooden table, some playing cards, and a notebook.">
-                      </div>
-                      <div class="carousel-item">
-                        <img src="./assets/images/boardwalk-games-carousel-image-6.webp" class="d-block w-100" alt="Students playing a card game at Boardwalk Games">
-                      </div>
+                        <div class="carousel-item active">
+                            <img src="./assets/images/boardwalk-games-carousel-image-1.webp" class="d-block w-100"
+                                alt=" The inside of Boardwalk Games with bookshelves filled with boardgames, and wooden tables to play at">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="./assets/images/boardwalk-games-carousel-image-2.webp" class="d-block w-100"
+                                alt="The inside of Boardwalk Games with bookshelves filled with boardgames, and wooden tables to play at">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="./assets/images/boardwalk-games-carousel-image-3.webp" class="d-block w-100"
+                                alt="The inside of Boardwalk Games with bookshelves filled with boardgames, and wooden tables to play at">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="./assets/images/boardwalk-games-carousel-image-4.webp" class="d-block w-100"
+                                alt="The back-room at Boardwalk Games set up for a Dungeons and Dragons evening">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="./assets/images/boardwalk-games-carousel-image-5.webp" class="d-block w-100"
+                                alt=" A cup of steaming coffee on a wooden table, some playing cards, and a notebook.">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="./assets/images/boardwalk-games-carousel-image-6.webp" class="d-block w-100"
+                                alt="Students playing a card game at Boardwalk Games">
+                        </div>
                     </div>
-                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
-                      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                      <span class="visually-hidden">Previous</span>
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying"
+                        data-bs-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Previous</span>
                     </button>
-                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="next">
-                      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                      <span class="visually-hidden">Next</span>
+                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying"
+                        data-bs-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Next</span>
                     </button>
-                  </div>
+                </div>
             </div>
         </div>
     </header>
     <!-- main elemnent to hold key sections of homepage -->
     <main>
         <!-- services -->
-        <section id="services"class="container section">
+        <section id="services" class="container section">
             <div class="row">
                 <div class="col-12 text-center">
                     <h2 class="display-6">Services</h2>
@@ -103,7 +118,7 @@
                 <div class="col-12 col-md-6 col-xl-3">
                     <div class="card">
                         <img src="assets/images/services-1.webp" class="card-img-top"
-                            alt="Boardwalk games cafe table by a window, stacks of boardgames can be seen on the table" >
+                            alt="Boardwalk games cafe table by a window, stacks of boardgames can be seen on the table">
                         <div class="card-body">
                             <h3 class="card-title sub-heading-color">Play in our cafe</h3>
                             <p class="card-text">
@@ -154,7 +169,7 @@
                 <div class="col-12 col-md-6 col-xl-3">
                     <div class="card">
                         <img src="assets/images/services-4.webp" class="card-img-top"
-                            alt="A kids party being held at Boardwalk Games" >
+                            alt="A kids party being held at Boardwalk Games">
                         <div class="card-body">
                             <h3 class="card-title sub-heading-color">Kids parties</h3>
                             <p class="card-text">
@@ -184,50 +199,53 @@
                 <div class="col-12 col-md-6 col-xl-4">
                     <h3 class="sub-heading-color">Contact info</h3>
                     <address>
-                            <strong><i class="fa-solid fa-location-dot"></i> Boarwalk Games</strong><br>
-                            123 Boardwalk <br>
-                            Boardwalk City, 12345
+                        <strong><i class="fa-solid fa-location-dot"></i> Boarwalk Games</strong><br>
+                        123 Boardwalk <br>
+                        Boardwalk City, 12345
                     </address>
                     <p><i class="fa-solid fa-phone"></i> 012 345 6789 <br>
                         <i class="fa-regular fa-paper-plane"></i> info@boardwalk-games.co</p>
                     <div class="social-links my-4">
-                        <a target="_blank" rel="noopener" aria-label="follow us on instagram" id="" href="http://www.instagram.com"><i class="fa-brands fa-instagram"></i></a>
-                        <a target="_blank" rel="noopener" aria-label="follow us on facebook" id="" href="http://www.facebook.com"><i class="fa-brands fa-facebook"></i></a>
-                        <a target="_blank" rel="noopener" aria-label="follow us on Twitter /X" id="" href="http://www.X.com"><i class="fa-brands fa-x-twitter"></i></a>
+                        <a target="_blank" rel="noopener" aria-label="follow us on instagram" id=""
+                            href="http://www.instagram.com"><i class="fa-brands fa-instagram"></i></a>
+                        <a target="_blank" rel="noopener" aria-label="follow us on facebook" id=""
+                            href="http://www.facebook.com"><i class="fa-brands fa-facebook"></i></a>
+                        <a target="_blank" rel="noopener" aria-label="follow us on Twitter /X" id=""
+                            href="http://www.X.com"><i class="fa-brands fa-x-twitter"></i></a>
                     </div>
-                    </div>
+                </div>
                 <!-- opening times -->
                 <div class="col-12 col-md-6 col-xl-4">
                     <table class="table table-dark">
                         <thead>
-                          <tr>
-                            <th scope="col">Day</th>
-                            <th scope="col">Open</th>
-                            <th scope="col">Close</th>
-                          </tr>
+                            <tr>
+                                <th scope="col">Day</th>
+                                <th scope="col">Open</th>
+                                <th scope="col">Close</th>
+                            </tr>
                         </thead>
                         <tbody>
-                          <tr>
-                            <td>Mon</td>
-                            <td colspan="2">Closed</td>
-                          </tr>
-                          <tr>
-                            <td>Tue-Thurs</td>
-                            <td>11am</td>
-                            <td>11pm</td>
-                          </tr>
-                          <tr>
-                            <td>Fri-Sat</td>
-                            <td>11am</td>
-                            <td>12am</td>
-                          </tr>
-                          <tr>
-                            <td>Sun</td>
-                            <td>12pm</td>
-                            <td>7pm</td>
-                          </tr>
+                            <tr>
+                                <td>Mon</td>
+                                <td colspan="2">Closed</td>
+                            </tr>
+                            <tr>
+                                <td>Tue-Thurs</td>
+                                <td>11am</td>
+                                <td>11pm</td>
+                            </tr>
+                            <tr>
+                                <td>Fri-Sat</td>
+                                <td>11am</td>
+                                <td>12am</td>
+                            </tr>
+                            <tr>
+                                <td>Sun</td>
+                                <td>12pm</td>
+                                <td>7pm</td>
+                            </tr>
                         </tbody>
-                      </table>
+                    </table>
                 </div>
             </div>
         </div>
