--- a/game-library.html
+++ b/game-library.html
@@ -236,6 +236,55 @@
                 </div>
             </div>
         </section>
+        <section id="reserve" class="section container">
+            <div class="row justify-content-center">
+                <div class="col-12 col-md-8">
+                    <h2 class="text-center display-6">reserve a game</h2>
+                    <p>
+                        Reserve a board game for your next visit to Boardwalk Games. Pick your challenge, and let the
+                        adventure begin! Fill out your details and preferred game below, and we'll have it set aside for
+                        you when you arrive.
+                    </p>
+                    <form action="./success.html" method="GET">
+                        <div class="row">
+                            <div class="col-12 col-lg-4 mb-3">
+                                <label for="name" class="form-label">Full Name</label>
+                                <input class="form-control" id="name" name="name" type="text" required>
+                            </div>
+                            <div class="col-12 col-lg-4 mb-3">
+                                <label for="phone" class="form-label">Phone number</label>
+                                <input class="form-control" id="phone" name="phone" type="number" required>
+                            </div>
+                            <div class="col-12 col-lg-4 mb-3">
+                                <label for="email" class="form-label">Email address</label>
+                                <input class="form-control" id="email" name="email" type="email" required>
+                            </div>
+                            <div class="col-12 col-lg-9 mb-3">
+                                <label for="game" class="form-label">Select game</label>
+                                <select id="game" class="form-select" name="game" required>
+                                    <option value="" selected>Select game</option>
+                                    <option value="Galaxy Pioneers">Galaxy Pioneers</option>
+                                    <option value="Mystic Woods">Mystic Woods</option>
+                                    <option value="Captain's Gambit">Captain's Gambit</option>
+                                    <option value="Critter Quest">Critter Quest</option>
+                                    <option value="Setters of Catan">Setters of Catan</option>
+                                    <option value="Monopoly">Monopoly</option>
+                                    <option value="Exploding Kittens">Exploding Kittens</option>
+                                    <option value="Cluedo">Cluedo</option>
+
+                                </select>
+                            </div>
+                            <div class="col-12 col-lg-3">
+                                <label for="date" class="form-label">Requested Date</label>
+                                <input class="form-control" type="date" name="date" id="date" required>
+                            </div>
+                            <div class="col-12">
+                                <button type="submit" class="btn custom-button-outline float-end">Submit</button>
+                            </div>
+                    </form>
+                </div>
+            </div>
+        </section>
     </main>
     <!-- footer/contact -->
     <!-- mt-auto pushes footer to bottom -->
@@ -249,50 +298,53 @@
                 <div class="col-12 col-md-6 col-xl-4">
                     <h3 class="sub-heading-color">Contact info</h3>
                     <address>
-                            <strong><i class="fa-solid fa-location-dot"></i> Boarwalk Games</strong><br>
-                            123 Boardwalk <br>
-                            Boardwalk City, 12345
+                        <strong><i class="fa-solid fa-location-dot"></i> Boarwalk Games</strong><br>
+                        123 Boardwalk <br>
+                        Boardwalk City, 12345
                     </address>
                     <p><i class="fa-solid fa-phone"></i> 012 345 6789 <br>
                         <i class="fa-regular fa-paper-plane"></i> info@boardwalk-games.co</p>
                     <div class="social-links my-4">
-                        <a target="_blank" rel="noopener" aria-label="follow us on instagram" id="" href="http://www.instagram.com"><i class="fa-brands fa-instagram"></i></a>
-                        <a target="_blank" rel="noopener" aria-label="follow us on facebook" id="" href="http://www.facebook.com"><i class="fa-brands fa-facebook"></i></a>
-                        <a target="_blank" rel="noopener" aria-label="follow us on Twitter /X" id="" href="http://www.X.com"><i class="fa-brands fa-x-twitter"></i></a>
+                        <a target="_blank" rel="noopener" aria-label="follow us on instagram" id=""
+                            href="http://www.instagram.com"><i class="fa-brands fa-instagram"></i></a>
+                        <a target="_blank" rel="noopener" aria-label="follow us on facebook" id=""
+                            href="http://www.facebook.com"><i class="fa-brands fa-facebook"></i></a>
+                        <a target="_blank" rel="noopener" aria-label="follow us on Twitter /X" id=""
+                            href="http://www.X.com"><i class="fa-brands fa-x-twitter"></i></a>
                     </div>
-                    </div>
+                </div>
                 <!-- opening times -->
                 <div class="col-12 col-md-6 col-xl-4">
                     <table class="table table-dark">
                         <thead>
-                          <tr>
-                            <th scope="col">Day</th>
-                            <th scope="col">Open</th>
-                            <th scope="col">Close</th>
-                          </tr>
+                            <tr>
+                                <th scope="col">Day</th>
+                                <th scope="col">Open</th>
+                                <th scope="col">Close</th>
+                            </tr>
                         </thead>
                         <tbody>
-                          <tr>
-                            <td>Mon</td>
-                            <td colspan="2">Closed</td>
-                          </tr>
-                          <tr>
-                            <td>Tue-Thurs</td>
-                            <td>11am</td>
-                            <td>11pm</td>
-                          </tr>
-                          <tr>
-                            <td>Fri-Sat</td>
-                            <td>11am</td>
-                            <td>12am</td>
-                          </tr>
-                          <tr>
-                            <td>Sun</td>
-                            <td>12pm</td>
-                            <td>7pm</td>
-                          </tr>
+                            <tr>
+                                <td>Mon</td>
+                                <td colspan="2">Closed</td>
+                            </tr>
+                            <tr>
+                                <td>Tue-Thurs</td>
+                                <td>11am</td>
+                                <td>11pm</td>
+                            </tr>
+                            <tr>
+                                <td>Fri-Sat</td>
+                                <td>11am</td>
+                                <td>12am</td>
+                            </tr>
+                            <tr>
+                                <td>Sun</td>
+                                <td>12pm</td>
+                                <td>7pm</td>
+                            </tr>
                         </tbody>
-                      </table>
+                    </table>
                 </div>
             </div>
         </div>
